# ollama_oyster_setup

./: .gitignore  Dockerfile  README.md  Readme.md  TODO  build.sh  config.json  docker-compose.yml  entrypoint.sh  install.sh  llama2.txt  mistral.txt  setup.sh  supervisord.conf  tinyllama.txt
oyster_http_proxy/: Cargo.toml
oyster_http_proxy/src/: main.rs
setup/: setup.sh  supervisord.conf
