[package]
name = "http_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
awc="3.3"

clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
tokio = { version = "1.24.2", features = ["sync", "io-util","fs"] }
tokio-stream = "0.1.1"
k256 = { version = "0.13.2", features = ["ecdsa", "ecdsa-core"] }
url = "2.2"
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
hex = "0.4.3"
alloy-rlp = {version="0.3.4",features=["derive"]}
alloy-sol-types = "0.6.3"
alloy-sol-macro = "0.6.3"
ethabi = "18.0.0"
